--- a/Geometry 1/macros.tex
+++ b/Geometry 1/macros.tex
@@ -1,4 +1,5 @@
 \newcommand{\liff}{\llap{$\iff$}}
+\newcommand{\parallelsum}{\mathbin{\!/\mkern-5mu/\!}}
 \newcommand{\rap}[1]{\rrap{\text{ (#1)}}}
 \newcommand{\red}[1]{\textcolor{red}{#1}}
 \newcommand{\blue}[1]{\textcolor{blue}{#1}}
